--- a/public/assets/scss/utils/_variables.scss
+++ b/public/assets/scss/utils/_variables.scss
@@ -5,7 +5,7 @@ $azul:#116688;
 $azul-intermedio:#3F8EBA;
 $azul-oscuro:#000D55;
 $azul-claro:#1469B6;
-$azul-neon:#00BBFF;
+$azul-neon:#33589F;
 
 $background-cards:#d1d1d1;
 $background-ticketChat:#505D71;
@@ -17,7 +17,7 @@ $max:#848386;
 
 $violet:#7f00ff;
 $gold:#efbf04;
-$new:#0ea2bd;
+$new:#33589F;
 $oncurse:#0fcc45;
 $planning:#0726d6;
 $wait:#ffac69;
