--- a/public/assets/scss/layout/ticketInfo/_responsive.scss
+++ b/public/assets/scss/layout/ticketInfo/_responsive.scss
@@ -68,9 +68,7 @@
                 overflow: scroll;
                 min-height: 20%;
                 .tabs-container{
-                    .tmln__list{
-                        justify-content: center;
-                    }
+
                     .tmln.tmln--box.timeline-horinzontal {
                         display: block;
                         opacity: 1;
@@ -92,5 +90,10 @@
                 }
             }
         }
+    }
+}
+@media (min-width: 768px) and (max-width: 980px) {
+    .tabs-container .tmln__list {
+        justify-content: center !important;
     }
 }
